2003-11-30	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Preinstall adainclude_HEADERS.
	Add $(dirstamp) to preinstallation rules.

2003-11-25	Joel Sherrill <joel@OARcorp.com>

	PR 528/rtems_misc
	* rtems.ads: Add task variables to Ada binding.

2003-09-04	Joel Sherrill <joel@OARcorp.com>

	* rtems-multiprocessing.adb, rtems-multiprocessing.ads, rtems.adb,
	rtems.ads: URL for license changed.

2003-07-08	Joel Sherrill <joel@OARcorp.com>

	PR 418/ada
	* rtems.adb: Add missing all keyword to derefence pointer.

2003-07-08	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove (Merged into ../configure.ac).
	* Makefile.am: Reflect having merged configure.ac into
	../configure.ac.

2003-03-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove AC_CONFIG_AUX_DIR.

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AM_INIT_AUTOMAKE([1.7.2]).

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AC_PREREQ(2.57).

2003-02-03	Joel Sherrill <joel@OARcorp.com>

	PR 338/filesystem
	* rtems.adb, rtems.ads: Side-effect of fixing reentrancy problem with 
	rtems_io_lookup_name() (API change).

2003-01-03	Joel Sherrill <joel@OARcorp.com>

	* rtems.ads: Corrected Configuration_Table record definition to 
	match current RTEMS source. sp01 now runs.

2002-11-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Fix package name.

2002-10-29	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove AC_ENABLE_MULTILIB.
	* Makefile.am: Add CVS-Id.

2002-10-25	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Add nostdinc to AM_INIT_AUTOMAKE.

2002-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Reformat.
	Add autom4te*cache.
	Remove autom4te.cache.

2002-08-30	Joel Sherrill <joel@OARcorp.com>

	* rtems.adb (IO_Initialize): Make this match the C prototype.

2002-08-27	Joel Sherrill <joel@OARcorp.com>

	* rtems.ads: Corrected binding for Io_Initialize.
